infra/kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: invoice
  name: invoice-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice-postgres
  template:
    metadata:
      labels:
        app: invoice-postgres
    spec:
      containers:
      - name: invoice-postgres
        image: postgres:17.2-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: invoice-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: invoice-postgres-service
  namespace: invoice
spec:
  selector:
    app: invoice-postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
