infra/kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: invoice
  name: invoice-server-deployment
  labels:
    app: invoice-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: invoice-server
  template:
    metadata:
      labels:
        app: invoice-server
    spec:
      containers:
      - name: invoice-server
        image: invoice-reader-app-server
        ports:
        - containerPort: 8000

---

apiVersion: apps/v1
kind: Service
metadata:
  name: invoice-server-service
spec:
  selector:
    app: invoice-server
  ports:
    - protocol: HTTP
      port: 8000
      targetPort: 8000
