infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invoice-ingress
  namespace: invoice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: invoice-ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: invoice-ui-service
            port:
              number: 5173
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: invoice-server-service
            port:
              number: 8000
